Revision history for Perl distribution WWW-PiHole

This is a changelog file in addition to git commit messages.

{{$NEXT}}

  - Fix typos in Changes
  - Document methods (launch, _url, and new)

0.231550  2023-06-04 19:59:11+02:00 Europe/Budapest
  - Add _url private method to construct Zoom URL
  - Add launch public method to start Zoom with the constructed URL
  - Release to CPAN after GitHub