@@ -8,4 +8,7 @@
     </option>
     <option name="perlInterpreter" value="Local, System: Perl 5.36.1" />
   </component>
+  <component name="Perl5XSubsState">
+    <option name="isActual" value="false" />
+  </component>
 </project>
